<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_custom_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sign_up_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_login_input_height"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginStart="@dimen/me_login_input_margin"
                android:layout_marginTop="@dimen/me_login_input_margin"
                android:drawableEnd="@drawable/app_list_item_arrow"
                android:drawablePadding="@dimen/me_login_input_margin"
                android:drawableStart="@drawable/me_sign_up_country"
                android:hint="@string/sign_up_country"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/login_logo_text" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/me_login_input_height"
                    android:layout_marginEnd="@dimen/me_login_input_margin"
                    android:layout_marginStart="@dimen/me_login_input_margin"
                    android:layout_marginTop="@dimen/me_login_input_margin"
                    android:drawablePadding="@dimen/me_login_input_margin"
                    android:drawableStart="@drawable/login_email"
                    android:hint="@string/sign_up_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_logo_text" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginStart="@dimen/me_login_input_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_code_layout"
                    android:layout_width="@dimen/me_sign_up_v_code_width"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sign_up_v_code"
                        android:layout_width="@dimen/me_sign_up_v_code_width"
                        android:layout_height="@dimen/me_login_input_height"
                        android:layout_alignParentStart="true"
                        android:drawablePadding="@dimen/me_login_input_margin"
                        android:drawableStart="@drawable/me_sign_up_v_code"
                        android:hint="@string/sign_up_v_code"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/login_logo_text" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/sign_up_send_code"
                    android:layout_width="@dimen/me_sign_up_v_text_width"
                    android:layout_height="@dimen/me_login_input_height"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:gravity="start|center"
                    android:text="@string/sign_up_send_code"
                    android:textColor="@color/login_link"
                    android:textSize="@dimen/sign_up_send_code" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_psw_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_up_psw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/me_login_input_height"
                    android:layout_marginEnd="@dimen/me_login_input_margin"
                    android:layout_marginStart="@dimen/me_login_input_margin"
                    android:layout_marginTop="@dimen/me_login_input_margin"
                    android:drawablePadding="@dimen/me_login_input_margin"
                    android:drawableStart="@drawable/login_psw"
                    android:hint="@string/sign_up_psw"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_logo_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/me_login_input_height"
                    android:layout_marginEnd="@dimen/me_login_input_margin"
                    android:layout_marginStart="@dimen/me_login_input_margin"
                    android:layout_marginTop="@dimen/me_login_input_margin"
                    android:drawablePadding="@dimen/me_login_input_margin"
                    android:drawableStart="@drawable/me_sign_up_phone"
                    android:hint="@string/sign_up_phone"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:imeActionId="@+id/submit"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_logo_text" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/sign_up_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginTop="@dimen/app_title_height"
                android:text="@string/sign_up_policy"
                android:textColor="@color/login_link"
                android:textSize="@dimen/login_link_text" />

            <TextView
                android:id="@+id/sign_up_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_login_input_height"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginStart="@dimen/me_login_input_margin"
                android:layout_marginTop="@dimen/me_login_input_margin"
                android:background="@drawable/app_submit_button_bg"
                android:gravity="center"
                android:text="@string/sign_up_agree"
                android:textColor="@color/white"
                android:textSize="@dimen/login_button_text"
                android:singleLine="true"
                android:ellipsize="middle"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>