<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/reset_title"
        layout="@layout/app_custom_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reset_psw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_title"
        android:layout_marginEnd="@dimen/me_login_input_margin"
        android:layout_marginStart="@dimen/me_login_input_margin"
        android:layout_marginTop="@dimen/me_login_input_margin">

        <EditText
            android:id="@+id/reset_psw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/me_login_input_height"
            android:drawablePadding="@dimen/me_login_input_margin"
            android:drawableStart="@drawable/login_psw"
            android:hint="@string/me_new_psw"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/login_logo_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reset_re_psw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_psw_layout"
        android:layout_marginEnd="@dimen/me_login_input_margin"
        android:layout_marginStart="@dimen/me_login_input_margin"
        android:layout_marginTop="@dimen/me_login_input_margin">

        <EditText
            android:id="@+id/reset_re_psw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/me_login_input_height"
            android:drawablePadding="@dimen/me_login_input_margin"
            android:drawableStart="@drawable/login_psw"
            android:hint="@string/me_re_new_psw"
            android:imeActionId="@+id/reset_re_reter"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/login_logo_text" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/reset_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_login_input_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/app_button_margin_bottom"
        android:layout_marginEnd="@dimen/me_login_input_margin"
        android:layout_marginStart="@dimen/me_login_input_margin"
        android:background="@drawable/app_cancel_button_bg"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_button_cancel"
        android:textColor="@color/app_cancel_btn_text"
        android:textSize="@dimen/login_button_text" />

    <TextView
        android:id="@+id/reset_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_login_input_height"
        android:layout_above="@id/reset_cancel"
        android:layout_marginBottom="@dimen/me_login_input_margin"
        android:layout_marginEnd="@dimen/me_login_input_margin"
        android:layout_marginStart="@dimen/me_login_input_margin"
        android:background="@drawable/app_submit_button_bg"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_button_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_text" />

</RelativeLayout>