<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/login_img" />

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="@dimen/me_login_logo_height"
                android:layout_height="@dimen/me_login_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/me_login_logo_margin"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/login_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_login_input_margin_top">

                <EditText
                    android:id="@+id/login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/me_login_input_height"
                    android:layout_marginEnd="@dimen/me_login_input_margin"
                    android:layout_marginStart="@dimen/me_login_input_margin"
                    android:drawablePadding="@dimen/me_login_input_margin"
                    android:drawableStart="@drawable/login_email"
                    android:hint="@string/login_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/me_login_input_margin"
                    android:paddingStart="@dimen/me_login_input_margin"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_psw_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_login_input_margin_top">

                <EditText
                    android:id="@+id/login_psw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/me_login_input_height"
                    android:layout_marginEnd="@dimen/me_login_input_margin"
                    android:layout_marginStart="@dimen/me_login_input_margin"
                    android:drawablePadding="@dimen/me_login_input_margin"
                    android:drawableStart="@drawable/login_psw"
                    android:hint="@string/login_psw"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/login_psw"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/me_login_input_margin"
                    android:paddingStart="@dimen/me_login_input_margin"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginTop="@dimen/me_login_input_margin_top"
                android:text="@string/login_forget_psw"
                android:textColor="@color/login_link"
                android:textSize="@dimen/login_link_text" />

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_login_input_height"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginStart="@dimen/me_login_input_margin"
                android:layout_marginTop="@dimen/me_login_input_margin_top"
                android:background="@drawable/app_submit_button_bg"
                android:gravity="center"
                android:text="@string/login_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/login_button_text" />

            <TextView
                android:id="@+id/login_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/me_login_input_margin"
                android:layout_marginTop="@dimen/me_login_input_margin_top"
                android:text="@string/login_register"
                android:textColor="@color/login_link"
                android:textSize="@dimen/login_link_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>